--- a/style.css
+++ b/style.css
@@ -1,7 +1,38 @@
-body{
-    width: 70vh;
-    height: 60vh;
-    color: aqua;
-    border-color: brown;
-    padding: 20vh;
+#clock{
+    position: relative;
+    margin: auto;
+    height: 40vw;
+    width: 40vw; 
+    background: url(th.jpeg) no-repeat;
+    background-size: 100%;
+    
+}
+
+#hours, #minutes, #seconds{
+    position: absolute;
+    background: black;
+    border-radius: 10px; 
+    transform-origin: bottom;
+}
+#hours{
+    width: 1.8%;
+    height: 15%;
+    top: 24%;
+    left: 51%;
+    opacity: 0.8;  
+}
+#minutes{
+    width: 1.6%;
+    height: 20%;
+    top: 19%;
+    left: 49.9%;
+    opacity: 0.8;  
+}
+#seconds{
+    width: 1%;
+    height: 25%;
+    top: 13%;
+    left: 50.25%;
+    opacity: 0.8; 
+    
 }
